crates/builder/src/parser/snapshots/builder__parser__converter__tests__expression_precedence.snap
---
source: crates/builder/src/parser/converter.rs
expression: "convert_root(parsed.root_node(),\n        r#\"\n            @postgres\n            module TestModule{            \n                type Foo {\n                    @column(\"custom_column\") @access(!self.role == \"role_admin\" || self.role == \"role_superuser\")\n                    bar: Baz\n                }\n            }\n        \"#.as_bytes(),\n        file_span, Path::new(\"input.exo\")).unwrap()"
---
types: []
modules:
  - name: TestModule
    annotations:
      - name: postgres
        params: None
    types:
      - name: Foo
        kind: Type
        fields:
          - name: bar
            typ:
              Plain:
                - Baz
                - []
                - ~
            annotations:
              - name: column
                params:
                  Single:
                    - StringLiteral:
                        - custom_column
              - name: access
                params:
                  Single:
                    - LogicalOp:
                        Or:
                          - RelationalOp:
                              Eq:
                                - LogicalOp:
                                    Not:
                                      - FieldSelection:
                                          Select:
                                            - Single:
                                                - - self
                                                - ~
                                            - - role
                                            - ~
                                      - ~
                                - StringLiteral:
                                    - role_admin
                                - ~
                          - RelationalOp:
                              Eq:
                                - FieldSelection:
                                    Select:
                                      - Single:
                                          - - self
                                          - ~
                                      - - role
                                      - ~
                                - StringLiteral:
                                    - role_superuser
                                - ~
                          - ~
            default_value: ~
        annotations: []
    methods: []
    interceptors: []
    base_exofile: input.exo
imports: []

